trabalhei mais um pouco na organizacao dos casos de teste agora estao passando dois casos de testes

--- a/DocumentacaoSobreTestes.org
+++ b/DocumentacaoSobreTestes.org
@@ -38,6 +38,8 @@
 ** Identifição do domínio de entrada
    + Variável (Mi)  Momento de inicio da chamada
    + Variável (Mt)  Momento de término da chamada
+
+** Implicações das variáveis de entradas passíveis de testes
    + Variável (Du)  Duração (Mt-Mi)
      Lembrando que essa variável marca também se a ligação sofreu
      desconto de 15% na tarifação.
@@ -45,11 +47,11 @@
      TarifPadr: Mi >= 8:00h e Mt < 18:00h
      TarifComDesc: Mi >= 18:00h e Mt < 8:00h
      TarifDif: !=TarifPadr e !=TarifComDesc
+     A ligação é tagueada, ou seja, rotulada. Essa é uma característica
+     de ligações que tem início no período de desconto de 50% mas
+     terminam no horário de cobrança cheia. Mesmo que essa ligação dure
+     mais de 60min, recebendo mais 15% de desconto, essa ligação ainda é diferenciada.
 
-   A ligação é tagueada, ou seja, rotulada. Essa é uma característica
-   de ligações que tem início no período de desconto de 50% mas
-   terminam no horário de cobrança cheia. Mesmo que essa ligação dure
-   mais de 60min, recebendo mais 15% de desconto, essa ligação ainda é diferenciada.
 
 ** Classes de Equivalência para horário de Tarifa Padrão (TarifPadr)  0.40/min (Sem Desc Adicional)
    M >= 8h e M<18h Cobrança com preço cheio 0,4 p/min
@@ -68,6 +70,13 @@ minuto 40 e dura até o minuto 10 das 9 horas, durando, portanto, 30min.
 | h             | 1 | 2 | 3 | 4 | 5 | 6 | 7 |  8 |  9 | 10 | 11 | 12 | 13 | 14 | 15 | 16 | 17 | 18 | 19 | 20 | 21 | 22 | 23 | 24 |
 | minIni/minFin |   |   |   |   |   |   |   | 40 | 10 |    |    |    |    |    |    |    |    |    |    |    |    |    |    |    |
 
+
+| mi | mt | du em Seg | tipo      |        tarifPadr/seg | VlrLigacao |
+|  8 | 59 |      3540 | TarifPadr | 0.006666666666666667 |       23.6 |
+| 17 | 59 |      3540 | TarifPadr | 0.006666666666666667 |       23.6 |
+|    |    |           |           |                      |            |
+#+TBLFM: @2$3=@2$2*60::@2$6=@2$3*@2$5::@3$3=@3$2*60::@3$6=@3$3*@3$5
+C-u C-c *
 
 ** Classes de Equivalencia para horário de Tarifa Padrão (TafifPadr) + Desconto Adicional
    M >= 8h e M<18h Cobrança com preço cheio 0,4 p/min menos 15% de desconto.
@@ -110,6 +119,8 @@ No caso de Du >= 60 a cobrança já não é mais de 0.40/min e sim 0.40 - 15%/min.
  C-u C-u C-c . (Insere timestamp)
  C-u C-c * (Recalcula tabela)
  C-' (Editar formula)
+
+
 * Casos de testes
 
 #+TBLFM: $4=$3-$2::@2$4=@2$3-@2-$1
@@ -122,3 +133,4 @@ No caso de Du >= 60 a cobrança já não é mais de 0.40/min e sim 0.40 - 15%/min.
 |                  |                 |                   |                  |     |
 
   o
+
