--- a/DocumentacaoSobreTestes.org
+++ b/DocumentacaoSobreTestes.org
@@ -32,10 +32,14 @@
    + O dominio de entrada define o tipo de ligação
 
      TarifPadr: Ligação com inicio entre às 8h (inclusive) e 18h (exclusive)
+     
      tarifComDesc: Ligação com início entre às 18h (inclusive) e as 8h
      do dia seguinte (excluse)
-     TarifDif: Ligação com início dentro do período ou da TarifPadr ou
-     da TarifComDesc mas com término dentro do próximo tipo de tarifação
+     
+     TarifDif: Uma ligação pode ter início dentro do período da tarifa
+     padrão e terminar no período da tarifa com desconto e vice versa.
+
+
    + Duração da chamada     
      A Duração da chamada define se a ligação deve sofrer desconto de
      15% na tarifação, independente do tipo de ligação 
